--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,5 @@
     "cortex-debug.openocdPath": "${command:particle.getDebuggerOpenocdPath}",
     "C_Cpp.default.configurationProvider": "particle.particle-vscode-core",
     "particle.targetPlatform": "boron",
-    "particle.targetDevice": "Mansfield-B"
+    "particle.targetDevice": ""
 }
