--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "cortex-debug.openocdPath": "${command:particle.getDebuggerOpenocdPath}",
     "C_Cpp.default.configurationProvider": "particle.particle-vscode-core",
     "particle.targetPlatform": "boron",
-    "particle.targetDevice": ""
+    "particle.targetDevice": "",
+    "particle.firmwareVersion": "1.5.2"
 }
